--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.6.1",
-    "react-native": "0.57.7"
+    "react-native": "0.57.7",
+    "react-native-shadow": "^1.2.2"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
